# sensor_controller

./: CMakeLists.txt  README.rst  prj.conf
inc/scif/: SC_Example.scp  sce.lst  scif.c  scif.h  scif_doxyfile  scif_framework.c  scif_framework.h  scif_how_to_use.html  scif_osal_tidpl.c  scif_osal_tidpl.h  scif_run_doxygen.bat
src/: main.c
